--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,152 +1,15 @@
-/* Please read through the provided code below to understand it */
-
-/* QUESTION #3: PLACE SIDEBAR STYLES BELOW */
-.sidebar-container {
-	position: fixed;
-	width: 280px;
-	height: 100%;
-	background-color: black;
-	-webkit-transform: translateX(-280px);
-	-webkit-transition: all 0.3s;
-}
-
-.sidebar-item {
-	font-weight: 700;
-	font-size: 16px;
-	color: white;
-	padding: 15px 20px 15px 20px;
-}
-
-/* QUESTION #4: PLACE CAROUSEL STYLES BELOW */
-.carousel-container {
-	width: 960px;
-	margin-left: auto;
-	margin-right: auto;
-	height: 500px;
-	overflow: hidden;
-	position: relative;
-}
-
-#carousel {
-	width: 4800px;
-	height: 100%;
-	margin-left: 0px;
-	-webkit-transition: all 0.3s;
-}
-
-.carousel-item {
-	width: 960px;
-	position: relative;
-	height: 100%;
-	float: left;
-}
-/* QUESTION #5: PLACE "OTHER CSS" STYLES BELOW */
-.section {
-	width: 100%;
-	height: 500px;
-	position: relative;
-}
-
-#name-section {
-	background-color: #2bde73;
-}
-
-#major-section {
-	background-color: #8bb2af;
-}
-
-#fact-section {
-	background-color: #fff;
-}
-
-#fact-text {
-	color: black;
-}
-
-/* DOCUMENT SET UP */
-
+/* Document set up */
 body, html {
 	margin: 0 auto;
 	width: 100%;
 	height: 100%;
-	min-width: 960px;
 	background-color: black;
 	-webkit-font-smoothing: antialiased;
 	-o-font-smoothing: antialiased;
 	font-smoothing: antialiased;
-	font-family: Lato;
 }
 
-a {
-	text-decoration: none;
-}
-
-.clear {
-	clear: both;
-}
-
-.img-scaled {
-	width: 100%;
-	height: 100%;
-}
-
-.img-scaled-wh {
-	width: 100%;
-	height: 100%;
-	position: relative;
-}
-
-/* YOU DON'T NEED TO UNDERSTAND THE CODE BELOW */
-
-#nav-toggle { 
-	position: absolute; 
-	left: 50%; top: 50%; 
-}
-
-#nav-toggle {
-	padding: 10px 30px 15px 0px; 
-}
-
-#nav-toggle span, #nav-toggle span:before, #nav-toggle span:after {
-	height: 3px;
-	width: 30px;
-	background: #fff;
-	position: absolute;
-	display: block;
-	content: '';
-}
-
-#nav-toggle span:before {
-	top: -10px; 
-}
-
-#nav-toggle span:after {
-	bottom: -10px;
-}
-
-/* FREEBIES */
-
-/* Styling the Sidebar Button */
-#sidebar-button {
-	position: fixed;
-	z-index: 100;
-	left: 15px;
-	top: 15px;
-	cursor: pointer;
-	-webkit-transition: all .3s;
-	-moz-transition: all .3s;
-	-o-transition: all .3s;
-	transition: all .3s;
-} 
-
-/* Overriding default styles on the ul */
-.sidebar-container ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	margin-top: 10px;
-}
-
+/* Going top to bottom */
 .page-wrapper {
 	height: 100%;
 	width: 100%;
@@ -155,73 +18,296 @@ a {
 	transition: all .3s;
 }
 
-/* Styling for the carousel previous button */
-#carousel-prev {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    padding: 10px;
-    left: 60px;
-    top: 50%;
-    margin-top: -30px;
-    cursor: pointer;
-    border-radius: 50%;
-    border: 1px solid #fff;
-    -webkit-transition: all 0.3s;
+.section {
+	width: 100%;
+	height: 700px;
+	position: relative;
 }
 
-/* Styling for the carousel next button */
-#carousel-next {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    padding: 10px;
-    right: 60px;
-    top: 50%;
-    margin-top: -30px;
-    cursor: pointer;
-    border-radius: 50%;
-    border: 1px solid #fff;
-    -webkit-transition: all 0.3s;
+#landing-section {
+	background-color: black;
+	height:690px;
+	z-index: 2;
 }
 
-/* Styling for the quotes and text in each section */
-.quote, .text {
+#whoweare-section {
+	background-color: white;
+	height: 780px;
+}
+
+#whatwedo-section {
+	/*background-color: #f0f0f0;*/
+	background-color: white;
+	height: 1500px;
+}
+
+/* Getting rid of ul styles */
+.navbar-container ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	margin-top: 10px;
+}
+
+.navbar-container {
+	top: 0;
+	right: 0;
+	position: absolute;
+	width: 390px;
+	height: 50px;
+	background-color: black;
+	z-index: 10;
+}
+
+.navbar-item {
+	font-weight: 700;
+	font-size: 16px;
+	color: white;
+	float: left;
+	padding: 10px 5px 10px 5px;
+	font-family: Charter;
+}
+
+#link {
+	cursor: pointer;
+}
+
+img#logo-pic{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -118px;
+	margin-left: -280px;
+}
+
+.title-text {
 	position: absolute;
 	font-size: 36px;
-	color: white;
+	color: black;
+	font-family: Charter;
 	font-weight: 700;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-   	transform: translateX(-50%) translateY(-50%);
+	left: 50%;
+	
 }
 
-/* Styling for the author text in each quote */
-.author {
-	font-size: 12px;
-	font-weight: 700;
-	letter-spacing: .2rem;
-	text-transform: uppercase;
-	margin-top: 10px;
+
+
+#triangle-down1 {
+	width: 0;
+	height: 0;
+	border-left: 90px solid transparent;
+	border-right: 90px solid transparent;
+	border-top: 20px solid black;
+	margin-left: -90px;
+	left: 50%;
+	position: absolute;
+	z-index: 2;
+}
+
+#triangle-down2 {
+	width: 0;
+	height: 0;
+	border-left: 90px solid transparent;
+	border-right: 90px solid transparent;
+	border-top: 20px solid white;
+	margin-left: -90px;
+	left: 50%;
+	position: absolute;
+	z-index: 2;
+}
+
+.whatwedo-title-container {
+	/*background-color: #2f3338;*/
+	background-color: black;
+	color: white;
+	height: 120px;
+	width: 100%;
+	position: absolute;
+}
+
+.title-line{
+	left: 50%;
+	margin-left: -150px;
+	width: 300px;
+	height: 5px;
+	background: black;
+	position: absolute;
+}
+
+#top-line{
+	top: 400px;
+}
+
+#whoweare-title {
+	top: 412px;
+	margin-left: -120px;
+}
+
+#bottom-line{
+	top: 462px;
+}
+
+#w-top-line{
+	top: 30px;
+	background: white;
+}
+
+#whatwedo-title {
+	top: 40px;
+	margin-left: -120px;
+	color: white;
+}
+
+#w-bottom-line{
+	top:90px;
+	background: white;
+}
+
+.portrait-container {
+	position: relative;
+	top: -100px;
+	/*margin-left: 50px;*/
+	overflow: hidden;
+	z-index: 1;
+}
+
+.groupformal img {
+	border-top: 5px solid black;
+	border-bottom: 5px solid black;
+}
+
+.whoweare-text-container {
+	position: absolute;
+	width: 1100px;
+	height: 200px;
+	top: 500px;
+	left: 50%;
+	margin-left: -550px;
+}
+
+#whoweare-text {
+	font-family: Charter;
+	letter-spacing: .5px;
+	font-weight: 400;
+	font-size: 18px;
+	text-align: center;
+	line-height: 2em;
+}
+
+#roster-button {
+	position: absolute;
+	width: 200px;
+	top: 680px;
+	left: 50%;
+	background-color: darkcyan;
+	color: white;
+	padding: 10px;
+	border-radius: 5px;
+	font-family: Open Sans;
+	font-size: 18px;
+	margin-left: -110px;
 	text-align: center;
 }
 
-/* jQuery Manipulation Classes */
+#roster-button:hover {
+	opacity: 0.70;
+}
 
-.no-scroll {
+.contents-container{
+	position: relative;
+	top: 120px;
+	height: 90%;
+	width: 80%;
+	left: 10%;
+	background-color: white;
+}
+
+.content-item {
+	position: relative;
+	height: 400px;
+}
+
+.image-container {
+	position: absolute;
+	left: 0;
+	width: 70%;
+	height: 100%;
+	background-color: white;
 	overflow: hidden;
 }
 
-.wrapper-active, .button-active {
-	-webkit-transform: translateX(280px);
-	-moz-transform: translateX(280px);
-	transform: translateX(280px);
+.image-flip-container {
+	position: absolute;
+	right: 0;
+	width: 70%;
+	height: 100%;
+	background-color: white;
+	overflow: hidden;
 }
 
-.sidebar-active {
-	-webkit-transform: translateX(0px);
-	-moz-transform: translateX(0px);
-	-o-transform: translateX(0px);
+.descrip-container {
+	position: absolute;
+	right: 0;
+	width: 30%;
+	height: 100%;
+	max-height: 350px;
+	background-color: #f0f0f0;
+	padding: 25px;
+}
+
+.descrip-flip-container {
+	position: absolute;
+	left: 0;
+	width: 30%;
+	height: 100%;
+	background-color: #f0f0f0;
+	padding: 25px;
+}
+
+#philo-img {
+	margin-left: -100px;
+	margin-top: -100px;
+}
+
+#alumni-img, #service-img {
+	margin-top: -200px;
+}
+
+.descrip-title {
+	color: #1a1a1a;
+	font-weight: 400;
+	font-size: 30px;
+	margin-bottom: 10px;
+	margin-top: 70px;
+}
+
+.description {
+	font-size: 18px;
+	font-weight: 500;
+	color: #666;
+	height: 100%;
+}
+
+.subheading-line{
+	left: 40%;
+	margin-left: -130px;
+	width: 260px;
+	height: 1px;
+	background: black;
+	position: absolute;
+	margin-top: -8px;
+}
+
+#philo-line{
+	left: 27%;
+	margin-left: -80px;
+	width: 160px;
+}
+
+footer {
+	background-color: black;
+	float: left;
+	height: 200px;
+	width: 100%;
+	box-shadow: 5px 5px 10px #202020;
 }
