--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ body, html {
 #whatwedo-section {
 	/*background-color: #f0f0f0;*/
 	background-color: white;
-	height: 1400px;
+	height: 1450px;
 }
 
 /* Getting rid of ul styles */
@@ -68,8 +68,18 @@ body, html {
 	font-family: Charter;
 }
 
+.navbar-item a {
+	text-decoration: none;
+	color: white;
+	background-color: none;
+}
+
 #link {
 	cursor: pointer;
+}
+
+#link:hover {
+	text-decoration: underline;
 }
 
 img#logo-pic{
@@ -216,8 +226,8 @@ a {
 
 .contents-container{
 	position: relative;
-	top: 120px;
-	height: 90%;
+	top: 140px;
+	height: 83%;
 	width: 80%;
 	left: 10%;
 	background-color: white;
@@ -226,6 +236,17 @@ a {
 .content-item {
 	position: relative;
 	height: 400px;
+	margin: 20px
+}
+
+.contents-container:hover > .content-item {
+	opacity: 0.5;
+}
+
+.contents-container:hover > .content-item:hover{
+	opacity: 1.0;
+	transition: 0.3s ease;
+    -webkit-transform: scale(1.05);
 }
 
 .image-container {
@@ -261,6 +282,7 @@ a {
 	left: 0;
 	width: 30%;
 	height: 100%;
+	max-height: 350px;
 	background-color: #f0f0f0;
 	padding: 25px;
 }
@@ -286,7 +308,7 @@ a {
 	font-size: 18px;
 	font-weight: 500;
 	color: #666;
-	height: 100%;
+	max-height: 250px;
 }
 
 .subheading-line{
@@ -320,6 +342,12 @@ footer {
 	font-family: Lato;
 }
 
+.soc-link:hover {
+	cursor: pointer;
+	transition: 0.3s ease;
+	-webkit-transform: scale(1.2);
+}
+
 #fb-img {
 	position: absolute;
 	left: 50%;
@@ -336,4 +364,22 @@ footer {
 	position: absolute;
 	left: 60%;
 	bottom: 10px;
+}
+
+#backtotop {
+	position: absolute;
+	right: 2%;
+	bottom: 10px;
+}
+
+#backtotop:hover {
+	transition: 0.3s ease;
+	-webkit-transform: scale(1.1);
+	cursor: pointer;
+}
+
+#roster-button a {
+	text-decoration: none;
+	color: white;
+	background-color: none;
 }
