--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,9 @@ img#logo-pic{
 }
 
 .groupformal img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 	border-top: 5px solid black;
 	border-bottom: 5px solid black;
 }
